[package]
name = "pve-rs"
version = "0.8.7"
description = "PVE parts which have been ported to Rust"
homepage = "https://www.proxmox.com"
authors = ["Proxmox Support Team <support@proxmox.com>"]
edition = "2021"
license = "AGPL-3"
repository = "https://git.proxmox.com/?p=proxmox.git"

exclude = [
    "debian",
]

[lib]
crate-type = [ "cdylib" ]

[dependencies]
anyhow = "1.0"
base32 = "0.4"
base64 = "0.13"
env_logger = "0.10"
hex = "0.4"
http = "0.2.7"
libc = "0.2"
log = "0.4.17"
nix = "0.26"
openssl = "0.10.40"
serde = "1.0"
serde_bytes = "0.11"
serde_json = "1.0"
url = "2"

perlmod = { version = "0.13", features = [ "exporter" ] }

proxmox-apt = "0.10.6"
proxmox-http = { version = "0.9", features = ["client-sync", "client-trait"] }
proxmox-http-error = "0.1.0"
proxmox-notify = { version = "0.3", features = ["pve-context"] }
proxmox-openid = "0.10"
proxmox-resource-scheduling = "0.3.0"
proxmox-subscription = "0.4"
proxmox-sys = "0.5"
proxmox-tfa = { version = "4.0.4", features = ["api"] }
proxmox-time = "1.1.3"

[patch.crates-io]
proxmox-apt = { git = "https://github.com/jiangcuo/proxmox.git" , rev = "70e6472f8a8e8f34e8ec3b57b144fab02bacc3c1" }
proxmox-http = { git = "https://github.com/jiangcuo/proxmox.git" ,  rev = "70e6472f8a8e8f34e8ec3b57b144fab02bacc3c1"  }
proxmox-http-error = { git = "https://github.com/jiangcuo/proxmox.git" ,  rev = "70e6472f8a8e8f34e8ec3b57b144fab02bacc3c1"  }
proxmox-notify = { git = "https://github.com/jiangcuo/proxmox.git" ,  rev = "70e6472f8a8e8f34e8ec3b57b144fab02bacc3c1"  }
proxmox-openid = { git = "https://github.com/jiangcuo/proxmox.git" ,  rev = "70e6472f8a8e8f34e8ec3b57b144fab02bacc3c1"  }
proxmox-subscription = { git = "https://github.com/jiangcuo/proxmox.git" ,  rev = "70e6472f8a8e8f34e8ec3b57b144fab02bacc3c1"  }
proxmox-sys = { git = "https://github.com/jiangcuo/proxmox.git" ,  rev = "70e6472f8a8e8f34e8ec3b57b144fab02bacc3c1"  }
proxmox-tfa = { git = "https://github.com/jiangcuo/proxmox.git" ,  rev = "70e6472f8a8e8f34e8ec3b57b144fab02bacc3c1"  }
proxmox-time = { git = "https://github.com/jiangcuo/proxmox.git" ,  rev = "70e6472f8a8e8f34e8ec3b57b144fab02bacc3c1"  }
proxmox-resource-scheduling  = { git = "https://git.proxmox.com/git/proxmox-resource-scheduling.git" , rev = "09c43554fa4e211504319107997b8c5eaba270ec"}
perlmod  = { git = "https://git.proxmox.com/git/perlmod" , rev = "677cb0844646d7bfabcebeaaa35e84440d858195" }
nix = { git = "https://github.com/jiangcuo/nix.git", rev = "fb787ef97be7df1b5ef3612ab6179a625d6b6c86" }
